Some Change IN HTML and new css fle added

--- a/index.html
+++ b/index.html
@@ -5,16 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Web Page</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <h1 class="heading">10xAcademy</h1>
     <main>
-      <h1>Hello I am Subodh.This is my test GIT Reository</h1>
+      <h1 class="intro">Hello I am Subodh.This is my test GIT Reository</h1>
       <aside>
         <li>Item 1</li>
         <li>Item 2</li>
         <li>Item 3</li>
         <li>Item 4</li>
       </aside>
+      <div>Main content</div>
     </main>
   </body>
 </html>
